--- a/offer.html
+++ b/offer.html
@@ -40,9 +40,9 @@
     БИК: 042202824<br>
     Корр. счёт: 30101810200000000824<br>
     Email: email@example.com<br>
-    Телефон: +7 (___) ___-__-__</p>
+    Телефон: +7 (937) 235-93-41</p>
 
-    <p class="muted">Дата публикации оферты: 30.10.2025</p>
+    <p class="muted">Дата публикации оферты: 01.07.2025</p>
   </div>
 </body>
 </html>
