--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h2>Контакты</h2>
       <p>ИП Галимов Ингель Шамильевич<br>
       Email: <a href="mailto:email@example.com">email@example.com</a><br>
-      Телефон: +7 (___) ___-__-__</p>
+      Телефон: +7 (937) 235-93-41</p>
     </section>
   </main>
 
